--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -51,7 +51,10 @@
 
                 <div class="row">
                     <div class="col-6">
-                        <canvas id="myChart"></canvas>
+                        <canvas id="destinationChart"></canvas>
+                    </div>
+                    <div class="col-6">
+                        <canvas id="carbonFootprintChart"></canvas>
                     </div>
                 </div>
 
