Implemented data visualization that shows carbon dioxide saved by carpooling

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -15,7 +15,7 @@
     <script src="/static/destinationsChart.js"></script>
     <script src="/static/userAsPassengerTable.js"></script>
     <script src="/static/userAsDriverTable.js"></script>
-<!--     <script src="/static/displayPassengers.js"></script> -->
+    <script src="/static/carbonSavedChart.js"></script>
 
 </head>
 <body>
@@ -53,9 +53,9 @@
                     <div class="col-6">
                         <canvas id="destinationChart"></canvas>
                     </div>
-                    <div class="col-6">
-                        <canvas id="carbonFootprintChart"></canvas>
-                    </div>
+                </div>
+                <div class="row">
+                    <canvas id="carbonFootprintChart"></canvas>
                 </div>
 
             </div>
