Implemented chart that shows carboned dioxide over time with ChartJs

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -16,6 +16,7 @@
     <script src="/static/userAsPassengerTable.js"></script>
     <script src="/static/userAsDriverTable.js"></script>
     <script src="/static/carbonSavedChart.js"></script>
+    <script src="/static/carbonOverTimeChart.js"></script>
 
 </head>
 <body>
@@ -54,10 +55,14 @@
                         <canvas id="destinationChart"></canvas>
                     </div>
                 </div>
+                <br>
                 <div class="row">
                     <canvas id="carbonFootprintChart"></canvas>
                 </div>
-
+                <br>
+                <div class="row">
+                    <canvas id="carbonFootprintOverTimeChart"></canvas>
+                </div>
             </div>
             <div id="ridesAsDriver" class="tab-pane fade">
                     <div id="todayTable"></div>
