Fixed datepicker, added styling and features to search results

--- a/templates/add_ride.html
+++ b/templates/add_ride.html
@@ -22,7 +22,7 @@
       <form action="/add-ride" class="form-group" method=POST>
         
         Date of trip: 
-          <input id="datepicker" type="text" name="date"><br>
+          <input class="datepicker" type="text" name="date"><br>
         Where does your trip begin? 
           <input type="text" name="origin" class="query"><br>
         What is your destination?
