--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -2,22 +2,39 @@
 
 {% block content %}
 
-  <h2>Available rides from {{ origin }} to {{ destination }} on {{ date_desired }} :</h2>
+  <h3>Available rides from {{ origin }} to {{ destination }} on {{ date_desired }} :</h3>
 
-  <div>
+  
     {% for trip in trips %}
 
-        Date: {{ trip.date_of_trip }} <br>
-        Driver: {{ trip.user.fname }} <br>
+      <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">
+            <img src={{ trip.user.user_profile_img }} class="rounded-circle"> 
+            {{ trip.user.fname }}
+          </h5>
+          <h6 class="card-subtitle mb-2 text-muted">
+          
+          </h6>
+          <p class="card-text">
+          
 
-        <img src={{ trip.user.user_profile_img }}>
-
-        <form action="/join-ride" method="POST">
-          <input type="submit" value="Join ride!">
-          <input type="hidden" value={{ trip.trip_id }} name="trip">
+          </p>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Date: {{ trip.date_of_trip }}</li>
+            <li class="list-group-item">Cost: ${{ trip.trip_cost }} </li>
+            <li class="list-group-item">Willing to Stop Along the Way: {{ trip.willing_to_stop }} </li>
+            <li class="list-group-item">{{ trip.max_passengers - trip.num_passengers }} seats left  </li>
+          </ul>
+          <br>
+          <form action="/join-ride" method="POST">
+            <input type="submit" class="btn btn-primary" value="Join ride">
+            <input type="hidden" value={{ trip.trip_id }} name="trip">
         </form>
+        </div>
+      </div>
+      <br>
 
     {% endfor %}
-  </div>
 
 {% endblock %}
