--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,43 @@
 </head>
 <body>
 
-  <div class="container-fluid">
+  <div class="container">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Raite</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/add-ride">Post Ride</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/search-rides">Search Rides</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <img id="profileImg" src="" class="rounded-circle">
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/logout">Log Out</a>
+            </div>
+        </li>
+    </ul>
+    </div>
+    </nav>
 
   <!-- Show flashed messages -->
   {% with messages = get_flashed_messages() %}
@@ -16,7 +52,9 @@
       {% endfor %}
   {% endwith %}
 
+  <div class="container">
     {% block content %} put your content here {% endblock %}
+  </div>
 
   </div>
 
