--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,7 +12,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 
     <script src="/static/sortTrips.js"></script>
-    <script src="/static/destinationsChart.js"></script>
     <script src="/static/userAsPassengerTable.js"></script>
     <script src="/static/userAsDriverTable.js"></script>
     <script src="/static/carbonSavedChart.js"></script>
@@ -68,7 +67,7 @@
         {% endfor %}
     {% endwith %}
 
-    <h2>Welcome</h2>
+    <h2>Welcome, {{ user_info.fname }} ~ </h2>
     <br>
 
     <ul class="nav nav-tabs" role="tabpanel">
@@ -82,11 +81,6 @@
             <br><br>
             <p>Hello</p>
 
-            <div class="row">
-                <div class="col-6">
-                    <canvas id="destinationChart"></canvas>
-                </div>
-            </div>
             <br>
             <div class="row">
                 <canvas id="carbonFootprintChart"></canvas>
@@ -96,6 +90,7 @@
                 <canvas id="carbonFootprintOverTimeChart"></canvas>
             </div>
         </div>
+    
         <div id="ridesAsDriver" class="tab-pane fade">
                 <div id="todayTable"></div>
                 <div id="upcomingTable"> </div>
