--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-  <h3>Available rides from {{ origin }} to {{ destination }} on {{ date_desired }} :</h3>
+  <br>
+  <h3>Available rides from {{ origin }} to {{ destination }} on {{ date_desired }} :</h3><br>
 
   
     {% for trip in trips %}
