--- a/templates/base.html
+++ b/templates/base.html
@@ -29,14 +29,13 @@
     </ul>
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            <img id="profileImg" src="" class="rounded-circle">
+            <img src={{ user_info.user_profile_img }} class="rounded-circle">
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="/edit-profile">Edit profile</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="/logout">Log Out</a>
             </div>
