--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,5 +1,23 @@
 {% extends 'base.html' %}
 
+ {% block head%}
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
+
+    <script src="/static/sortTrips.js"></script>
+    <script src="/static/carbonOverTimeChart.js"></script>
+    <script src="/static/carbonSavedChart.js"></script>
+    <script src="/static/datePicker.js"></script>
+    <script src="/static/searchCity.js"></script>
+    <script src="/static/userAsDriverTable.js"></script>
+    <script src="/static/userAsPassengerTable.js"></script>
+
+ {% endblock %}
+
     <br>
     {% with messages = get_flashed_messages() %}
         {% for message in messages %}
@@ -70,25 +88,16 @@
       </div>
     </div>
 </div>
+
+
 <script>
 
     function getTrips() {
         $.get('/trips.json', sortTripsByDate);
     }
+    // add event listener
+    window.addEventListener("load", getTrips());
 
-    getTrips();
-
-
-    function displayUserInfo(results) {
-        let img = results["userInfo"]["userProfileImg"];
-        document.getElementById("profileImg").src = img;
-    }
-    
-    function getUserInfo() {
-            $.get('/user-info.json', displayUserInfo);
-        }
-
-    getUserInfo();
 
     $('#myTab a[href="#home"]').on('load', function (e) {
         e.preventDefault()
@@ -97,9 +106,5 @@
 
 </script>
 
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 {% endblock %}
