Updated edit_profile() database updates only what the user fills out in the form, fixed issue so correct user info is displayed in the passengers column in homepage

--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -8,10 +8,10 @@
     <form action="/edit-profile" method="post">
         <div class="form-row">
         <div class="col">
-          <input type="text" class="form-control" placeholder="First name" name="fname" required>
+            <input type="text" class="form-control" placeholder="First name" name="fname">
         </div>
         <div class="col">
-          <input type="text" class="form-control" placeholder="Last name" name="lname" required>
+            <input type="text" class="form-control" placeholder="Last name" name="lname">
         </div>
         </div>
         <br>
@@ -23,6 +23,9 @@
                 <option value="Non-Binary">Non-binary</option>
                 <option value="Male">Male</option>
             </select>
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" placeholder="Phone Number" name="phone_number">
             </div>
         </div>
         <br>
