--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <div class="container">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Raite</a>
+      <a class="navbar-brand" href="#">CarePool</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -52,7 +52,7 @@
         {% endfor %}
     {% endwith %}
 
-    <div class="container">
+    <div class="container-fluid">
       {% block content %} put your content here {% endblock %}
     </div>
 
